Se añaden controladores Report, Order y Product con tests de Customer y Report